white space done:)

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,8 @@
-/JavaSymbol.class
-/Scanner.class
 /parser$CUP$parser$actions.class
 /parser.class
 /sym.class
+/Snippet.class
+/java12.cup
+/JavaSymbol.class
+/Scanner.java/
+/Scanner.class
